2009-09-23  Uros Bizjak  <ubizjak@gmail.com>

	PR c/39779
	* c-typeck.c (build_binary_op) <short_shift>: Check that integer
	constant is more than zero.

2009-09-21  Janis Johnson  <janis187@us.ibm.com>

	PR c/41049
	* real.c decimal_from_integer, decimal_integer_string): New.
	(real_from_integer): Use them as special case for decimal float.
	* config/dfp-bit.c (_si_to_sd, _usi_to_sd): Use default rounding.
	(_di_to_sd, _di_to_dd, _di_to_td, _udi_to_sd, _udi_to_dd, _udi_to_td):
	Do not append zero after the decimal point in string to convert.

2009-09-18  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR middle-end/41009
	Backport from mainline
	2009-03-10  Richard Guenther  <rguenther@suse.de>
	Nathan Froyd  <froydnj@codesourcery.com>

	PR middle-end/37850
	* libgcc2.c (__mulMODE3): Use explicit assignments to form the result.
	(__divMODE3): Likewise.

2009-09-15  Uros Bizjak  <ubizjak@gmail.com>

	* config/alpha/alpha.md (smaxsf3): Disable for IEEE mode.
	(sminsf3): Ditto.

2009-09-12  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/install.texi (avr): Remove obsolete reference site.

2009-09-10  Peter Bergner  <bergner@vnet.ibm.com>

	Backport from mainline:
	2008-09-03  Anton Blanchard  <anton@samba.org>

	* config/rs6000/rs6000.c (rs6000_split_lock_test_and_set): Do not
	emit memory barrier before operation.

2009-08-31  Chris Demetriou  <cgd@google.com>

	* config/i386/i386.c (ix86_vectorize_builtin_conversion): Never
	vectorize if not TARGET_SSE2.

2009-08-28  Uros Bizjak  <ubizjak@gmail.com>

	* global.c (global_alloc): Do not calculate bitmatrix percentages
	when num_bytes == 0.

2009-08-28  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2009-08-26  Uros Bizjak  <ubizjak@gmail.com>

	* config/alpha/sync.md: Update comment about unpredictable LL/SC lock
	clearing by a taken branch.
	(sync_<fetchop_name><mode>): Split when epilogue_completed is set,
	effectively after bbro pass.
	(sync_nand<mode>): Ditto.
	(sync_old_<fetchop_name><mode>): Ditto.